gac_sb/objects/ProgrammeRechercheDeveloppement__c.object
<CustomObject>
    <description>Contient Les champs relatifs aux recherche et développement et pour parent l&apos;objet mission</description>
    <fields>
        <fullName>CommentaireLigne__c</fullName>
        <description>Commentaire Ligne</description>
        <label>Comentário linha</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LigneRechercheMots__c</fullName>
        <description>Ligne de recherche de mots clés</description>
        <label>Palavra-chave linha de pesquisa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LigneValeurRh__c</fullName>
        <description>Ligne valeur RH</description>
        <label>Valor RH linha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Programa de PD&amp;I</relationshipLabel>
        <relationshipName>Programa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TypeRecherche__c</fullName>
        <description>Type de recherche</description>
        <label>Tipo de linha</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>Produto</fullName>
                </value>
                <value>
                    <fullName>Processo</fullName>
                </value>
                <value>
                    <fullName>Serviço</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValeurAutre__c</fullName>
        <description>Valeur Autre ligne</description>
        <label>Valor outros linha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValeurConsommable__c</fullName>
        <description>Valeur consommables</description>
        <label>Valor Materia Prima linha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValeurPrestataire__c</fullName>
        <description>Valeur prestataires</description>
        <label>Valor Terceiros linha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Programa de PD&amp;I</label>
    <nameField>
        <label>Nome de Programa de PD&amp;I</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programa de PD&amp;I</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>